--- a/flames.html
+++ b/flames.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Flames</title>
-    <link rel="stylesheet" type="text/css" href=":https://parkians.herokuapp.com/.css">
+    <link rel="stylesheet" type="text/css" href=":https://parkians.herokuapp.com/flames.css">
   </head>
   <body>
     <div class="container">
